gc,jit: the ZGC compactor was refused by a RETURNED frame's residue, not an entry frame
`probes/MvsCreate.java` at `-Xmx256m` OOMed on ZGC in 9 s with 88% of the heap
free, because `relocation_skipped_jit` refused every compaction cycle on
`unregistered-jit-frame-on-stack`. The known-issue page concluded the process
entry point (`Vm::invoke` -> compiled `main`) was sitting on the stack without a
`JitEntryGuard` and that the repair was to register it.

There was no such frame. Every hit was the leftover return address of a compiled
frame that had already returned: `is_residue=true` on 3 of 3 refusing cycles,
the hit `0xaa7` bytes BELOW this thread's `JIT_RESIDUE_HI` mark, with no hit at
all in the 52 KB above the mark where a live entry-point frame would be.

`scan_active_jit_frames`' accept rule short-circuits the residue test with
`chain_len > 0`, on the argument that anything above the chain's `cover_hi` is a
frame the chain does not cover. That is right about MARKING and wrong about
LIVENESS: `JIT_RESIDUE_HI` is monotonic over the thread's whole life, so a
shallower JIT call that returned long ago leaves residue above the current
chain, and `[cover_hi, residue_hi)` is then scanned and misread. The sibling
probe in `refresh_moving_young_coverage_for_current_thread` classified the same
word correctly and declined; only the marking probe raises the refusal.

Split the two questions. Marking is unchanged - any accepted hit still
conservatively scans the full band, and `roots.rs` republishes those addresses
as pinned JIT roots whose page ZGC withholds. The refusal is raised only for a
hit the residue mark cannot explain, found by re-probing `[residue_hi, scan_hi)`
- not by trusting the first hit, since `native_stack_has_jit_frame` returns the
lowest one and a residue hit can hide a genuine one above it.

  before  compaction_cycles=1 objects_relocated=4421 skipped_jit=3   rc=1  9 s
  after   compaction_cycles=6 objects_relocated=1031610 skipped_jit=0 rc=0 36 s

`MvsCr